--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.2.2",
-    "marked": "^3.0.2",
+    "@tailwindcss/typography": "^0.4.1",
+    "monaco-editor": "^0.27.0",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-markdown": "^7.0.1",
+    "remark-gfm": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
+    "autoprefixer": "^10.3.4",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.9",
     "typescript": "4.4.2"
   }
 }
